--- a/1_1_getting_started/index.html
+++ b/1_1_getting_started/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>Interactive Data Visualization Tutorial</title>
+    <title>MUFC News</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <h3>Section 1 | Tutorial 1 | Getting Started</h3>
-    <p>Welcome to Interactive Data Visualization Tutorials! </p>
+    <h1>Manchester United Football Club</h1>
+    <h3>Transfers-Ins | Summer Window | Deadline Day</h3>
+     <p>Man Utd sign Sofyan Amrabat on a season-long loan from Fiorentina. The midfielder was one of the star performers for Morocco at the 2022 Fifa Men's World Cup.</p>
+     <p>Since Shaw and Malacia have picked up long-term injuries, they also sign fullback Sergio Reguilon from Spurs on loan for the season.</p>
+     <p>Goalkeeper Altay Bayindir joins on a permanent deal from Fenerbahce as a backup.</p>
   </body>
 </html>
