--- a/1_1_getting_started/index.html
+++ b/1_1_getting_started/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Manchester United Football Club</h1>
-    <h3>Transfers-Ins | Summer Window | Deadline Day</h3>
+    <h3>Transfer-Ins | Summer Window | Deadline Day</h3>
      <p>Man Utd sign Sofyan Amrabat on a season-long loan from Fiorentina. The midfielder was one of the star performers for Morocco at the 2022 Fifa Men's World Cup.</p>
      <p>Since Shaw and Malacia have picked up long-term injuries, they also sign fullback Sergio Reguilon from Spurs on loan for the season.</p>
      <p>Goalkeeper Altay Bayindir joins on a permanent deal from Fenerbahce as a backup.</p>
