--- a/1_3_intro_to_js/index.html
+++ b/1_3_intro_to_js/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
@@ -10,6 +9,7 @@
   <h1>Hello World!</h1>
   <h3>Section 1 | Tutorial 3 | Intro to JS</h3>
   <!-- add any HTML you might need here, like a button or a div -->
+  <button onclick="Counter()">Click to add increase by a single count</button>
   <script src="main.js"></script>
 </body>
 </html>
