Permanent table opening tag was missing

--- a/1_2_basic_html/index.html
+++ b/1_2_basic_html/index.html
@@ -11,6 +11,7 @@
   <p>The following players have joined the club during the summer of 2023:</p>
   <table>
     <!-- Add your table data here -->
+  <table class="Permanent" title="Permanent">
     <caption>
         Transfers-Ins | Summer Window | Permanent
       </caption>
