--- a/1_3_intro_to_js/index.html
+++ b/1_3_intro_to_js/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Hello World!</h1>
   <h3>Section 1 | Tutorial 3 | Intro to JS</h3>
+  <p>The starting number is zero.</p>
   <!-- add any HTML you might need here, like a button or a div -->
   <button onclick="Counter()">Click to add increase by a single count</button>
   <script src="main.js"></script>
