--- a/1_3_intro_to_js/index.html
+++ b/1_3_intro_to_js/index.html
@@ -10,7 +10,7 @@
   <h3>Section 1 | Tutorial 3 | Intro to JS</h3>
   <p>The starting number is zero.</p>
   <!-- add any HTML you might need here, like a button or a div -->
-  <button onclick="Counter()">Click to add increase by a single count</button>
+  <button onclick="Counter()">Click to increase number by a single count</button>
   <script src="main.js"></script>
 </body>
 </html>
